To announce to OMPI core testers:
