@@ -26,6 +26,8 @@ my $_defaults = {
     hostfile => undef,
     hostlist => undef,
     max_np => undef,
+    textwrap => 76,
+    drain_timeout => 5,
 };
 
 # Reset $Globals per a specific ini file
@@ -67,6 +69,13 @@ sub load {
     my $val = MTT::Values::Value($ini, "MTT", "textwrap");
     if ($val) {
         $Values->{textwrap} = $val;
+    }
+
+    # Output display preference
+
+    my $val = MTT::Values::Value($ini, "MTT", "drain_timeout");
+    if ($val) {
+        $Values->{drain_timeout} = $val;
     }
 }
 
