@@ -91,8 +91,14 @@ hostlist =
 # returned by &env_max_procs(), you can fill in an integer here.
 max_np = 
 
-# Output display preference
+# OMPI Core: Output display preference; the default width at which MTT
+# output will wrap.
 textwrap = 76
+
+# OMPI Core: After the timeout for a command has passed, wait this
+# many additional seconds to drain all output, and then kill it with
+# extreme prejiduce.
+drain_timeout = 5
 
 #======================================================================
 # MPI get phase
